# MlAstConcurrencyAnalyser

./: AstNodeTraverser.py  CMakeLists.txt  CodeToSicclConverter.py  ConcurrencyDetectorEnvironment.py  MemoryInstrumentation.c  README.md  RandomSicclGenerator.py  SicclGenerator.py  SicclToCodeGenerator.py  actor_critic_concurrency_error_detector.py  actor_critic_model_original.py  basicMultiThread  basicMultiThread.elf  build.sh  buildAndRun.sh  code_to_siccl.py  concurrency_detector_env.py  data_collector.c  deepq_reinforced_concurrency_error_detector.py  final.py  generated_siccl_example.py  mem_inst_analyser.c  memtrace.c  siccl_test.py  testInstrument.sh  testInterceptor.sh  test_concurrency_detector_env.py  test_concurrency_detector_model.py  utils.py
Interceptor/: Interceptor.c  testInterceptor.sh
MlBasedConcurrencyAnalysisk/: README.md  SicclGenerator.py  actor_critic_concurrency_error_detector.py  code_to_siccl.py  utils.py
MlBasedConcurrencyAnalysisk/not_relevant/: AstNodeTraverser.py  actor_critic_model_original.py
MlBasedConcurrencyAnalysisk/tests/: generated_siccl_example.py  siccl_test.py
include/: memtrace.h  types.h
testPrograms/: basicMultiThread.c  basicStrCpy.c  test.c  testIntercept
testedFrameworks/Interceptor/: Interceptor.c
tests/: generated_siccl_example.py  multithreading_test_code.py  siccl_test.py  test_code_to_siccl.py  test_concurrency_detector_env.py  test_random_siccl_gen.py  test_siccl_to_code.py
tests/test_programs/: simple_webserver.py
