project(sample)
add_library(myclient SHARED memtrace.c data_collector.c)
target_include_directories(myclient PRIVATE ${include/})
find_package(DynamoRIO PATHS DynamoRIO/cmake)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(myclient)
use_DynamoRIO_extension(myclient "drmgr")
use_DynamoRIO_extension(myclient "drreg")
use_DynamoRIO_extension(myclient "drutil")
use_DynamoRIO_extension(myclient "drx")